# bsc

src/bluesim/: Makefile  kernel.cxx
src/comp/: .gitignore  bsc.hs  comp.cabal  stack.yaml
src/comp/emb/: CHANGELOG.md  emb.cabal
src/comp/emb/app/: Main.hs
