cabal-version:      2.4
name:               comp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Bruno Flores
maintainer:         bruno@brunoflores.com.br

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable comp
    main-is:          bsc.hs

    -- Modules included in this executable, other than Main.
    other-modules:   FlagsDecode
                   , Backend
                   , BuildVersion
                   , Classic
                   , Error
                   , ErrorTCompat
                   , ErrorUtil
                   , Eval
                   , FStringCompat
                   , FileNameUtil
                   , Fixity
                   , Flags
                   , GHCPretty
                   , IOMutVar
                   , IOUtil
                   , Id
                   , IntegerUtil
                   , Log2
                   , PPrint
                   , PVPrint
                   , Position
                   , PreStrings
                   , Pretty
                   , Sort
                   , SpeedyString
                   , Util
                   , VFileName
                   , Verilog
                   , Version

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0, containers ^>=0.6.4.1,
                      mtl ^>=2.2.2, array ^>=0.5.4.0,
                      directory ^>=1.3.6.2, syb ^>=0.7.2.1,
                      regex-compat ^>=0.95.2.1, filepath ^>=1.4.2.1,
                      split, unix ^>=2.7.2.2, old-time,
                      process ^>=1.6.13.2, time ^>=1.9.3
    hs-source-dirs:   .,
                      ./Libs,
                      ./GHC,
                      ./GHC/posix,
                      ./Parser,
                      ../vendor/yices/include_hs,
                      ../vendor/stp/include_hs,
                      ../../src/Parsec
    default-language: Haskell2010
    extra-lib-dirs: /home/bruno/devel/bsc/src/vendor/yices/lib ,
                    /home/bruno/devel/bsc/src/vendor/stp/lib
    extra-libraries: yices stp
